--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-parse-fields",
+  "name": "@arise-travel/graphql-parse-fields",
   "version": "1.2.0",
   "description": "Parse fields from AST (GraphQLResolveInfo) into a JSON tree",
   "main": "index.js",
@@ -28,9 +28,9 @@
   "author": "Tejesh Mehta",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/tjmehta/graphql-parse-fields/issues"
+    "url": "https://github.com/@arise-travel/graphql-parse-fields/issues"
   },
-  "homepage": "https://github.com/tjmehta/graphql-parse-fields#readme",
+  "homepage": "https://github.com/@arise-travel/graphql-parse-fields#readme",
   "dependencies": {
     "cast-array": "^1.0.1"
   },
